--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,5 @@
-remote_theme: pages-themes/hacker@v0.2.0
+title: "My CP Archive"
+description: "A collection of Competitive Programming problems and solutions"
+baseurl: ""
+url: "https://vinh0212.github.io"
+
